// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/atomic-component-health-check when package.json conditions are not met should warn about invalid properties 1`] = `
"[32m✔[39m [1mReadme file[22m

[31m✖[39m [1mRequired properties in package.json[22m
  The component package.json is lacking required properties:
    [31m✖[39m [1mkeywords is not one of enum values: coveo-atomic-component[22m
       Your component should include "coveo-atomic-component" in its keywords, otherwise it will not be indexed. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#keywords
    [31m✖[39m [1mdescription does not meet minimum length of 20[22m
       You should provide a description of at least 20 characters explaining the component's purpose
    [31m✖[39m [1mrepository is required[22m
       You need to provide an URL to the component source code. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#repository

Publish aborted because some conditions have not been met
Make sure to address the above errors before publishing again
"
`;

exports[`@coveo/atomic-component-health-check when package.json conditions are not met should warn about missing properties 1`] = `
"[32m✔[39m [1mReadme file[22m

[31m✖[39m [1mRequired properties in package.json[22m
  The component package.json is lacking required properties:
    [31m✖[39m [1minstance requires property "unpkg"[22m
    [31m✖[39m [1mkeywords is required[22m
       Your component should include "coveo-atomic-component" in its keywords, otherwise it will not be indexed. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#keywords
    [31m✖[39m [1mdescription is required[22m
       You should provide a description of at least 20 characters explaining the component's purpose
    [31m✖[39m [1mrepository is required[22m
       You need to provide an URL to the component source code. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#repository

Publish aborted because some conditions have not been met
Make sure to address the above errors before publishing again
"
`;

exports[`@coveo/atomic-component-health-check when readme condition is not met should warn about missing readme file 1`] = `
"[31m✖[39m [1mReadme file[22m
  Missing README file. Make sure to include a \`README.md\` file in your component directory

[31m✖[39m [1mRequired properties in package.json[22m
  The component package.json is lacking required properties:
    [31m✖[39m [1mkeywords is not one of enum values: coveo-atomic-component[22m
       Your component should include "coveo-atomic-component" in its keywords, otherwise it will not be indexed. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#keywords
    [31m✖[39m [1mrepository is required[22m
       You need to provide an URL to the component source code. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#repository

Publish aborted because some conditions have not been met
Make sure to address the above errors before publishing again
"
`;
